--- a/config/templates/postgresql-db.yaml
+++ b/config/templates/postgresql-db.yaml
@@ -73,7 +73,12 @@ spec:
           synchronous_mode: false
           synchronous_mode_strict: false
           ttl: 30
-        podAnnotations: {}
+        podAnnotations:
+          com.flanksource.infra.logs/processors.0.drop_event.when.contains.message: "no action.  i am a secondary and i am following a leader"
+          com.flanksource.infra.logs/processors.1.drop_event.when.contains.message: "no action.  i am the leader with the lock"
+          com.flanksource.infra.logs/processors.2.drop_event.when.contains.message: "INFO: Lock owner:"
+          com.flanksource.infra.logs/processors.3.drop_event.when.contains.message: "INFO: does not have lock"
+          com.flanksource.infra.logs/processors.4.dissect.tokenizer: "%{date} %{time} %{TZ} [%{PID}] %{user} %{level}: %{log}"
         postgresql:
           parameters: '{{ (coll.Dict "logging_collector" "false" "log_destination" "stderr" "log_line_prefix" "%m [%p] %q%u@%d " ) | coll.Merge ( .spec.parameters | default (coll.Dict) ) | data.ToJSON }}'
           version: "12"
