--- a/config/templates/postgresql-db.yaml
+++ b/config/templates/postgresql-db.yaml
@@ -80,7 +80,7 @@ spec:
           com.flanksource.infra.logs/processors.3.drop_event.when.contains.message: "INFO: does not have lock"
           com.flanksource.infra.logs/processors.4.dissect.tokenizer: "%{date} %{time} %{TZ} [%{PID}] %{user} %{level}: %{log}"
         postgresql:
-          parameters: "{{ .spec.parameters | default (coll.Dict) | data.ToJSON }}"
+          parameters: '{{ (coll.Dict "logging_collector" "false" "log_destination" "stderr" "log_line_prefix" "%m [%p] %q%u@%d " ) | coll.Merge ( .spec.parameters | default (coll.Dict) ) | data.ToJSON }}'
           version: "12"
         resources:       
           limits:
